<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" >Login Page</string>
    <string name="name">Stephen Muiru</string>
    <string name="reg_no" tools:ignore="TypographyDashes">C026-01-0931/2022</string>
    <string name="hello_word">Hello World of Computer Science</string>
    <string name="background_image">Background image</string>
    <string name="textview"> </string>
    <string name="button">Login</string>
    <string name="username">Your Username.</string>
    <string name="password">Your Password.</string>
</resources>