<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="85dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/loginbg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="25dp"
            android:background="@color/fadeWhite"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <EditText
                android:id="@+id/textView2"
                android:layout_width="264dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="40dp"
                android:background="@color/white"
                android:hint="@string/username"
                android:inputType="text"
                android:text="@string/textview"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/editTextTextPassword2"
                android:layout_width="264dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="40dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="28sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="40dp"
                android:background="#DDFFFFFF"
                android:text="@string/button"
                android:textColorLink="#AA8D9FA9"
                android:textSize="24sp" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


    /home/redsteve/AndroidStudioProjects/BasicApplication/app/build/outputs/apk/debug/app-debug.apk